[workspace]
members = ["crates/akiyoshi", "crates/ui", "crates/theme"]
default-members = ["crates/akiyoshi"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.lints.rust]

[workspace.dependencies]
akiyoshi = { path = "crates/akiyoshi" }
ui = { path = "crates/ui" }
theme = { path = "crates/theme" }

# ui
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }

# smallvec is included here for convenience, it is used by gpui when creating
# components that can have children. uncomment this line or
# use `cargo add smallvec` to add it to your project
smallvec = "1.15.1"
